--- a/module/Contact/view/template/index/index.phtml
+++ b/module/Contact/view/template/index/index.phtml
@@ -13,14 +13,14 @@ $this->headTitle($title);
                     G/4, Ground Floor<br/>
                     Birenu Asha Palace<br/>
                     121, Sanjay Road<br/>
-                    Sakchi, Jamshedpur, Jharkhand, India - 831001
+                    Sakchi, Jamshedpur, Jharkhand, India - 831001. 
                 </p>
                 <p>
                     <strong>Contact No's</strong><br/>
-                    <p><i class="fa fa-whatsapp"></i> <abbr title="Whatsapp">P</abbr>: +91 9835 565 108</p>
-                    <p><i class="glyphicon glyphicon-phone"></i> <abbr title="Mobile">M</abbr>: +91 9263 189 425</p>
+                    <p><i class="glyphicon glyphicon-phone"></i> <abbr title="Phone">P</abbr>: +91 6572 230 746.</p>
+                    <p><i class="fa fa-whatsapp"></i> <abbr title="Whatsapp">M</abbr>: +91 9263 189 425.</p>
                     <p><i class="fa fa-envelope"></i> <abbr title="Email">E</abbr>: <a href="mailto:support@goyalhr.com">support@goyalhr.com</a></p>
-                    <p><i class="glyphicon glyphicon-time"></i> <abbr title="Hours">H</abbr>: Monday - Friday: 10:00 AM to 6:00 PM</p>
+                    <p><i class="glyphicon glyphicon-time"></i> <abbr title="Hours">H</abbr>: Monday - Saturday: 10:00 AM to 6:00 PM</p>
                 </p>
             </div>
             <div class="col-md-8">
