--- a/module/Admin/view/template/jobs/index.phtml
+++ b/module/Admin/view/template/jobs/index.phtml
@@ -10,12 +10,12 @@ $this->headTitle($title);
             <th style="width:10%;">Id</th>
             <th style="width:15%;">Title</th>
             <th style="width:15%;">Position</th>
-            <th style="width:40%;">Description</th>
-            <th style="width:40%;">Vacancy</th>
-            <th style="width:40%;">Status</th>
-            <th style="width:40%;">Recent Job</th>
+            <th style="width:30%;">Description</th>
+            <th style="width:10%;">Vacancy</th>
+            <th style="width:20%;">Status</th>
+            <th style="width:20%;">Recent Job</th>
             <th style="width:20%;">Posted At</th>
-            <th style="width:10%;">&nbsp;</th>
+            <th style="width:30%;">&nbsp;</th>
         </tr>
         <?php foreach ($jobs as $val) : ?>
             <tr style="background-color: <?php echo $this->cycle(array('#FFF', '#F0F0F0'))->next(); ?>">
@@ -28,8 +28,12 @@ $this->headTitle($title);
                 <td><?php echo $this->escapeHtml(ucfirst($val->recentpost));?></td>
                 <td><?php echo $this->escapeHtml($this->dateFormat(new DateTime($val->postedat), IntlDateFormatter::MEDIUM,IntlDateFormatter::MEDIUM));?></td>
                 <td>
+					<a href="<?php echo $this->serverUrl($this->url('admin-jobs',
+							array('action'=>'view', 'id' => $val->id)));?>" title="Mark as recent"><i class="glyphicon glyphicon-info-sign"></i></a>
                     <a href="<?php echo $this->serverUrl($this->url('admin-jobs',
                             array('action'=>'addinrecentjob', 'id' => $val->id)));?>" title="Mark as recent"><i class="glyphicon glyphicon-tag"></i></a>
+					<a href="<?php echo $this->serverUrl($this->url('admin-jobs',
+							array('action'=>'jobapplication', 'id' => $val->id)));?>" title="View Jobapplication"><i class="glyphicon glyphicon-list"></i></a>
                     <a href="<?php echo $this->serverUrl($this->url('admin-jobs',
                         array('action'=>'delete', 'id' => $val->id)));?>"><i class="glyphicon glyphicon-trash"></i></a>
                 </td>
