--- a/module/Job/view/template/index/search.phtml
+++ b/module/Job/view/template/index/search.phtml
@@ -1,6 +1,7 @@
 <div class="row">
     <div class="col-md-12">
-        <div class="page-header"><h1>Recent Jobs</h1></div>
+        <div class="page-header"><h1>Search result for <span style="color:red;"><?php echo $_POST['keyword']; ?></span></h1></div>
+        <?php if(count($this->paginator)){ ?>
         <?php foreach ($this->paginator as $val) : ?>
 				<?php if($val->status == 'active'){ ?>
 					<div class="col-lg-12">
@@ -19,6 +20,11 @@
 					</div>
 				<?php } ?>
         <?php endforeach; ?>
+        <?php }else{ ?>
+        <div class="col-lg-12">
+            There are no result to display for this keyword. Please try again with some different keyword.
+        </div>
+        <?php } ?>
     </div>
 </div>
 <?php
