--- a/public/front/css/style.css
+++ b/public/front/css/style.css
@@ -374,13 +374,22 @@ ul.pagination > li.disabled:hover > a {
     line-height: 50px;
 }
 
+.navbar-collapse {
+    border-top: 1px solid transparent;
+    box-shadow: 0 1px 0 rgba(255, 255, 255, 0.1) inset;
+    max-height: 340px;
+    overflow-x: visible;
+    padding-left: 10px;
+    padding-right: 10px;
+}
+
 .navbar-nav {
     margin-top: 4px;
 }
 
 .navbar-nav > li {
-    margin-left: 15px;
-    padding-bottom: 10px;
+    margin-left: 5px;
+    padding-bottom: 15px;
 }
 
 .navbar-inverse .navbar-nav > li > a {
