--- a/module/Admin/view/template/banner/index.phtml
+++ b/module/Admin/view/template/banner/index.phtml
@@ -29,8 +29,18 @@ $this->headTitle($title);
                 <td><?php echo $this->escapeHtml($val->urlpath);?></td>
                 <td><?php echo $this->escapeHtml($val->sortorder);?></td>
                 <td><?php if($val->status == 1){ echo 'Active'; }else{ echo 'Inactive'; } ?></td>
-                <td><?php echo $this->escapeHtml($this->dateFormat(new DateTime($val->createdat), IntlDateFormatter::MEDIUM,IntlDateFormatter::MEDIUM));?></td>
-                <td><?php echo $this->escapeHtml($this->dateFormat(new DateTime($val->updatedat), IntlDateFormatter::MEDIUM,IntlDateFormatter::MEDIUM));?></td>
+                <td>
+                    <?php 
+                        // echo $this->escapeHtml($this->dateFormat(new DateTime($val->createdat), IntlDateFormatter::MEDIUM,IntlDateFormatter::MEDIUM));
+                        echo date("F j, Y, g:i a", strtotime($val->createdat));
+                    ?>
+                </td>
+                <td>
+                    <?php 
+                        // echo $this->escapeHtml($this->dateFormat(new DateTime($val->updatedat), IntlDateFormatter::MEDIUM,IntlDateFormatter::MEDIUM));
+                        echo date("F j, Y, g:i a", strtotime($val->updatedat));
+                    ?>
+                </td>
                 <td>
                     <a href="<?php echo $this->serverUrl($this->url('admin-banner',
                         array('action'=>'edit', 'id' => $val->id)));?>"><i class="glyphicon glyphicon-edit"></i></a> &nbsp;
