--- a/module/Admin/view/template/blog/index.phtml
+++ b/module/Admin/view/template/blog/index.phtml
@@ -27,8 +27,18 @@ $this->headTitle($title);
                 <td><?php echo $this->escapeHtml($val->identifier);?></td>
                 <td><?php echo $this->escapeHtml($val->author);?></td>
                 <td><?php echo $val->description;?></td>
-                <td><?php echo $this->escapeHtml($this->dateFormat(new DateTime($val->createdat), IntlDateFormatter::MEDIUM,IntlDateFormatter::MEDIUM));?></td>
-                <td><?php echo $this->escapeHtml($this->dateFormat(new DateTime($val->updatedat), IntlDateFormatter::MEDIUM,IntlDateFormatter::MEDIUM));?></td>
+                <td>
+                    <?php 
+                        // echo $this->escapeHtml($this->dateFormat(new DateTime($val->createdat), IntlDateFormatter::MEDIUM,IntlDateFormatter::MEDIUM));
+                        echo date("F j, Y, g:i a", strtotime($val->createdat));
+                    ?>
+                </td>
+                <td>
+                    <?php 
+                        // echo $this->escapeHtml($this->dateFormat(new DateTime($val->updatedat), IntlDateFormatter::MEDIUM,IntlDateFormatter::MEDIUM));
+                        echo date("F j, Y, g:i a", strtotime($val->updatedat));
+                    ?>
+                </td>
                 <td>
                     <a href="<?php echo $this->serverUrl($this->url('admin-blog-comments',
                         array('action'=>'index', 'id' => $val->id)));?>"><i class="glyphicon glyphicon-comment"></i></a> &nbsp;
