--- a/module/Admin/view/template/contact/index.phtml
+++ b/module/Admin/view/template/contact/index.phtml
@@ -22,7 +22,12 @@ $this->headTitle($title);
                 <td><?php echo $this->escapeHtml($val->email);?></td>
                 <td><?php echo $this->escapeHtml($val->phone);?></td>
                 <td><?php echo $this->escapeHtml($val->message);?></td>
-                <td><?php echo $this->escapeHtml($this->dateFormat(new DateTime($val->createdat), IntlDateFormatter::MEDIUM,IntlDateFormatter::MEDIUM));?></td>
+                <td>
+                    <?php 
+                        // echo $this->escapeHtml($this->dateFormat(new DateTime($val->createdat), IntlDateFormatter::MEDIUM,IntlDateFormatter::MEDIUM));
+                        echo date("F j, Y, g:i a", strtotime($val->createdat));
+                    ?>
+                </td>
                 <td>
                     <a href="<?php echo $this->serverUrl($this->url('admin-contact',
                         array('action'=>'delete', 'id' => $val->id)));?>"><i class="glyphicon glyphicon-trash"></i></a>
