--- a/module/Admin/view/template/index/index.phtml
+++ b/module/Admin/view/template/index/index.phtml
@@ -48,8 +48,16 @@ $this->headTitle($title);
                 </blockquote>
                 <p>
                     <i class="glyphicon glyphicon-envelope"></i> <?php echo $admin->username; ?> <br>
-                    <i class="glyphicon glyphicon-log-in"></i> Online <?php echo $this->dateFormat(new DateTime($admin->lastloginat), IntlDateFormatter::LONG,IntlDateFormatter::MEDIUM); ?> <br>
-                    <i class="glyphicon glyphicon-time"></i> Since <?php echo $this->dateFormat(new DateTime($admin->createdat), IntlDateFormatter::LONG,IntlDateFormatter::MEDIUM); ?>
+                    <i class="glyphicon glyphicon-log-in"></i> Online 
+                        <?php 
+                            // echo $this->dateFormat(new DateTime($admin->lastloginat), IntlDateFormatter::LONG,IntlDateFormatter::MEDIUM); 
+                            echo date("F j, Y, g:i a", strtotime($admin->lastloginat));
+                        ?> <br>
+                    <i class="glyphicon glyphicon-time"></i> Since 
+                        <?php 
+                            // echo $this->dateFormat(new DateTime($admin->createdat), IntlDateFormatter::LONG,IntlDateFormatter::MEDIUM); 
+                            echo date("F j, Y, g:i a", strtotime($admin->createdat));
+                        ?>
                 </p>
             </div>
             <ul class="nav nav-tabs">
@@ -141,8 +149,18 @@ $this->headTitle($title);
                                     <td><?php echo $this->escapeHtml($val->firstname);?></td>
                                     <td><?php echo $this->escapeHtml($val->lastname);?></td>
                                     <td><?php echo $this->escapeHtml($val->username);?></td>
-                                    <td><?php echo $this->escapeHtml($this->dateFormat(new DateTime($val->createdat), IntlDateFormatter::LONG,IntlDateFormatter::MEDIUM));?></td>
-                                    <td><?php echo $this->escapeHtml($this->dateFormat(new DateTime($val->lastloginat), IntlDateFormatter::LONG,IntlDateFormatter::MEDIUM));?></td>
+                                    <td>
+                                        <?php 
+                                            // echo $this->escapeHtml($this->dateFormat(new DateTime($val->createdat), IntlDateFormatter::LONG,IntlDateFormatter::MEDIUM));
+                                            echo date("F j, Y, g:i a", strtotime($val->createdat));
+                                        ?>
+                                    </td>
+                                    <td>
+                                        <?php 
+                                            // echo $this->escapeHtml($this->dateFormat(new DateTime($val->lastloginat), IntlDateFormatter::LONG,IntlDateFormatter::MEDIUM));
+                                            echo date("F j, Y, g:i a", strtotime($val->lastloginat));
+                                        ?>
+                                    </td>
                                     <td>
                                         <a href="<?php echo $this->serverUrl($this->url('admin',
                                             array( 'action'=>'edit', 'id' => $val->id)));?>"><i class="glyphicon glyphicon-edit"></i></a> &nbsp;
