--- a/module/Admin/view/template/jobs/index.phtml
+++ b/module/Admin/view/template/jobs/index.phtml
@@ -26,7 +26,12 @@ $this->headTitle($title);
                 <td><?php echo $this->escapeHtml($val->vacancy);?></td>
                 <td><?php echo $this->escapeHtml(ucfirst($val->status));?></td>
                 <td><?php echo $this->escapeHtml(ucfirst($val->recentpost));?></td>
-                <td><?php echo $this->escapeHtml($this->dateFormat(new DateTime($val->postedat), IntlDateFormatter::MEDIUM,IntlDateFormatter::MEDIUM));?></td>
+                <td>
+                    <?php 
+                        // echo $this->escapeHtml($this->dateFormat(new DateTime($val->postedat), IntlDateFormatter::MEDIUM,IntlDateFormatter::MEDIUM));
+                        echo date("F j, Y, g:i a", strtotime($val->postedat));
+                    ?>
+                </td>
                 <td>
 					<a href="<?php echo $this->serverUrl($this->url('admin-jobs',
 							array('action'=>'view', 'id' => $val->id)));?>" title="Mark as recent"><i class="glyphicon glyphicon-info-sign"></i></a>
