--- a/module/Admin/view/template/jobs/jobapplication.phtml
+++ b/module/Admin/view/template/jobs/jobapplication.phtml
@@ -17,17 +17,24 @@ $this->headTitle($title);
             <tr style="background-color: <?php echo $this->cycle(array('#FFF', '#F0F0F0'))->next(); ?>">
                 <td><?php echo $i++; ?></td>
                 <td><?php echo $this->escapeHtml(ucwords($val->jobtitle));?></td>
-				<?php 
-					foreach($jobseekers as $jobseeker ){ 
-						if($jobseeker->userid == $val->userid){
-				?>
-				<td><?php echo $this->escapeHtml(ucwords($jobseeker->firstname.' '.$jobseeker->middlename.' '.$jobseeker->lastname));?></td>
-				<?php }else{ ?>
-				<td></td>
-				<?php  }
-					} 
-				?>
-                <td><?php echo $this->dateFormat(new DateTime($val->applydate), IntlDateFormatter::LONG,IntlDateFormatter::MEDIUM); ?></td>
+                <td>
+                    <?php 
+                        foreach($jobseekers as $jobseeker ){ 
+                            if($jobseeker->userid == $val->userid){
+                    ?>
+                <?php echo $this->escapeHtml(ucwords($jobseeker->firstname.' '.$jobseeker->middlename.' '.$jobseeker->lastname));?>
+                <?php }else{ ?>
+
+                <?php  }
+                        } 
+                ?>
+                </td>
+                <td>
+                    <?php 
+                        // echo $this->dateFormat(new DateTime($val->applydate), IntlDateFormatter::LONG,IntlDateFormatter::MEDIUM); 
+                        echo date("F j, Y, g:i a", strtotime($val->applydate));
+                    ?>
+                </td>
                 <td>
 					<a href="<?php echo $this->serverUrl($this->url('admin-jobs',
                         array('action'=>'viewapplication', 'id' => $val->id)));?>"><i class="glyphicon glyphicon-info-sign"></i></a>
