--- a/module/Admin/view/template/page/index.phtml
+++ b/module/Admin/view/template/page/index.phtml
@@ -25,8 +25,18 @@ $this->headTitle($title);
                 <td><?php echo $this->escapeHtml($val->title);?></td>
                 <td><?php echo $this->escapeHtml($val->identifier);?></td>
                 <td><?php echo substr($val->contents, 0, 300);?>...</td>
-                <td><?php echo $this->escapeHtml($this->dateFormat(new DateTime($val->createdat), IntlDateFormatter::MEDIUM,IntlDateFormatter::MEDIUM));?></td>
-                <td><?php echo $this->escapeHtml($this->dateFormat(new DateTime($val->updatedat), IntlDateFormatter::MEDIUM,IntlDateFormatter::MEDIUM));?></td>
+                <td>
+                    <?php 
+                        // echo $this->escapeHtml($this->dateFormat(new DateTime($val->createdat), IntlDateFormatter::MEDIUM,IntlDateFormatter::MEDIUM));
+                        echo date("F j, Y, g:i a", strtotime($val->createdat));
+                    ?>
+                </td>
+                <td>
+                    <?php 
+                        // echo $this->escapeHtml($this->dateFormat(new DateTime($val->updatedat), IntlDateFormatter::MEDIUM,IntlDateFormatter::MEDIUM));
+                        echo date("F j, Y, g:i a", strtotime($val->updatedat));
+                    ?>
+                </td>
                 <td>
                     <a href="<?php echo $this->serverUrl($this->url('admin-page',
                         array('action'=>'edit', 'id' => $val->id)));?>"><i class="glyphicon glyphicon-edit"></i></a> &nbsp;
