--- a/module/Admin/view/template/user/jobseeker.phtml
+++ b/module/Admin/view/template/user/jobseeker.phtml
@@ -31,8 +31,18 @@ $this->headTitle($title);
                 <td><?php echo $this->escapeHtml($val->type);?></td>
                 <td><?php echo $this->escapeHtml($val->state);?></td>
                 <td><?php echo $this->escapeHtml($val->country);?></td>
-                <td><?php echo $this->escapeHtml($this->dateFormat(new DateTime($val->createdat), IntlDateFormatter::MEDIUM,IntlDateFormatter::MEDIUM));?></td>
-                <td><?php echo $this->escapeHtml($this->dateFormat(new DateTime($val->lastloginat), IntlDateFormatter::MEDIUM,IntlDateFormatter::MEDIUM));?></td>
+                <td>
+                    <?php 
+                        // echo $this->escapeHtml($this->dateFormat(new DateTime($val->createdat), IntlDateFormatter::MEDIUM,IntlDateFormatter::MEDIUM));
+                        echo date("F j, Y, g:i a", strtotime($val->createdat));
+                    ?>
+                </td>
+                <td>
+                    <?php 
+                        // echo $this->escapeHtml($this->dateFormat(new DateTime($val->lastloginat), IntlDateFormatter::MEDIUM,IntlDateFormatter::MEDIUM));
+                        echo date("F j, Y, g:i a", strtotime($val->lastloginat));
+                    ?>
+                </td>
                 <td>
                     <a href="<?php echo $this->serverUrl($this->url('admin-user',
                         array('action'=>'edit', 'id' => $val->id)));?>"><i class="glyphicon glyphicon-edit"></i></a> &nbsp;
