--- a/module/User/view/template/employer/dashboard.phtml
+++ b/module/User/view/template/employer/dashboard.phtml
@@ -80,7 +80,11 @@
                 <p>
                     <i class="glyphicon glyphicon-envelope"></i> <?php echo $user->email; ?> <br>
                     <i class="glyphicon glyphicon-globe"></i> <?php echo $company->url; ?> <br>
-                    <i class="glyphicon glyphicon-time"></i> Since <?php echo $this->dateFormat(new DateTime($user->createdat), IntlDateFormatter::LONG,IntlDateFormatter::MEDIUM); ?>
+                    <i class="glyphicon glyphicon-time"></i> Since 
+                    <?php 
+                    	// echo $this->dateFormat(new DateTime($user->createdat), IntlDateFormatter::LONG,IntlDateFormatter::MEDIUM); 
+                    	echo date("F j, Y, g:i a", strtotime($user->createdat));
+                    ?>
                 </p>
             </div>
             <div class="row">
