Added the code for static block
Signed-off-by: Roshan B <roshanbhgt@gmail.com>

--- a/module/Application/view/template/index/index.phtml
+++ b/module/Application/view/template/index/index.phtml
@@ -101,36 +101,20 @@
         <div class="col-md-6">
             <div class="panel panel-default">
                 <div class="panel-heading">
-                    <h3 class="panel-title"><?php echo $this->translate('Employer Solutions') ?></h3>
+                    <h3 class="panel-title"><?php echo $employersolutions->title ?></h3>
                 </div>
                 <div class="panel-body">
-                    <p>
-                        We offer our clients customized solutions for their human resources needs. 
-                    </p>
-                    <p>
-                        Our main client service areas are <span style="color:#c52d2f;">Talent Acquisition</span> (e.g., recruitment and selection, project-based recruitment, mass recruitment, temporary staffing, etc.), and <span style="color:#c52d2f;">HR Outsourcing Matters</span> (e.g. Payroll Processing, Compliance Management etc). 
-                    </p>
-                    <p>
-                        Additionally, Goyal HR’s staffing and HR management solutions are tailored specifically to our clients' needs, providing them with increased workforce flexibility, productivity and profitability. 
-                    </p>
+                    <?php echo $employersolutions->content ?>
                 </div>
             </div>
         </div>
         <div class="col-md-6">
             <div class="panel panel-default">
                 <div class="panel-heading">
-                    <h3 class="panel-title"><?php echo $this->translate('Jobseeker Solutions') ?></h3>
+                    <h3 class="panel-title"><?php echo $jobseekersolutions->title ?></h3>
                 </div>
                 <div class="panel-body">
-                    <p>
-                        When selecting an HR partner during your career search, choose Goyal HR. 
-                    </p>
-                    <p>
-                        Goyal HR offers a unique combination of experience, methodology, and professional commitment that makes us the easy choice as your HR partner in meeting your career goals. 
-                    </p>
-                    <p>
-                        Learn more about our services by and There's never a fee to job seekers for our employment services.
-                    </p>
+                    <?php echo $jobseekersolutions->content ?>
                 </div>
             </div>
         </div>
