--- a/public/front/css/style.css
+++ b/public/front/css/style.css
@@ -375,8 +375,8 @@ ul.pagination > li.disabled:hover > a {
 }
 
 .navbar-collapse {
-    border-top: 1px solid transparent;
-    box-shadow: 0 1px 0 rgba(255, 255, 255, 0.1) inset;
+    /*border-top: 1px solid transparent;
+    box-shadow: 0 1px 0 rgba(255, 255, 255, 0.1) inset;*/
     max-height: 340px;
     overflow-x: visible;
     padding-left: 10px;
